# modulab-llm-course

./: .gitignore  PRJ01_W1_001_Python_Clean_Code.ipynb  PRJ01_W1_003_Langchain_Components.ipynb  PRJ01_W1_003_Langchain_Components[Answer].ipynb  PRJ01_W1_005_Gradio_Chatbot.ipynb  README.md  pyproject.toml
w1/: PRJ01_W0_Poetry_Setup.md  PRJ01_W1_004_LCEL.ipynb  PRJ01_W1_004_LCEL[Answer].ipynb  PRJ01_W1_005_Gradio_Chatbot.ipynb  PRJ01_W1_005_Gradio_Chatbot[Answer].ipynb
