[project]
name = "modulab-llm-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.4",
    "gradio-pdf>=0.0.21",
    "gradio>=5.3.0",
    "ipykernel>=6.29.5",
    "langchain-google-genai>=2.0.9",
    "langchain-openai>=0.3.2",
    "langchain>=0.3.15",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
]
